<resources>
    <string name="app_name">QuizApp</string>
    <string name="time">Remaining Time</string>
    <string name="time1">00:00</string>
    <string name="display1">Congratulation you are star</string>
    <string name="display2">Good Keep it up</string>
    <string name="display3">Please improve your skills</string>
    <string name="display4">You need to work hard</string>
    <string name="display5">Work hard on your skills</string>
    <string name="first">Welcome to Android Quiz Application.</string>
    <string name="firsttext">Its a time to show your skills.</string>
    <string name="fontfamily">times new roman</string>
    <string name="secondtext">Click on Button</string>
    <string name="Question">Questions </string>
    <string name="SubText">Submit</string>
    <string name="SaveBut">Save Answer</string>
    <string name="ResBut">Reset</string>
    <string name="first1">Start Quiz</string>
    <string name="hint">Enter your name:</string>
    <string name="butcl">Clear</string>
    <string name="Que1">Question1 : </string>
    <string name="Que2">Question2 : </string>
    <string name="Que3">Question3 : </string>
    <string name="Que4">Question4 : </string>
    <string name="Que5">Question5 : </string>
    <string name="Que6">Question6 : </string>
    <string name="Que7">Question7 : </string>
    <string name="Que8">Question8 : </string>
    <string name="id1">rg1

    </string>
    <string name="but1">Proceed Next</string>
    <string name="scorevalue">Your Report is Generated </string>
    <string name="Que9">Question9 : </string>
    <string name="Que10">Question10 : </string>
    <string name="Instruction">Instructions:</string>
    <string name="I1">          Total number of questions: 10</string>
    <string name="I2">  Once you click start quiz yor times start.</string>
    <string name="I3">  Click the Finish Quiz button to submit test.</string>
    <string name="I4">All Questions are compulsory.</string>
    <string name="I5">When time is completed your test automatically end.</string>
    <string name="I6">You can reset your test once only.</string>
    <string name="Q1">What is splash screen in Android?</string>
    <string name="Q1A">Initial activity of an application</string>
    <string name="Q1B">Initial service of an application</string>
    <string name="Q1C"> Initial method of an application</string>
    <string name="Q1D">Initial screen of an application</string>

    <string name="Q2">What is ADB in android?</string>

    <string name="Q2A">Image tool</string>
    <string name="Q2B">Development tool</string>
    <string name="Q2C">Android Debug Bridge</string>
    <string name="Q2D">None of the above</string>
    <string name="Q3">Name attribute of TextView</string>
    <string name="Q3A">android:id</string>
    <string name="Q3B">android:capitalize</string>
    <string name="Q3C">android:editable</string>
    <string name="Q3D">all of the above</string>
    <string name="Q4">Which of the following is the Android UI control?</string>
    <string name="Q4A">TaskView</string>
    <string name="Q4B">EditText</string>
    <string name="Q4C">ImageButton</string>
    <string name="Q4D">All of the above</string>
    <string name="Q5">Name the component of android user interface?</string>
    <string name="Q5A">Activity</string>
    <string name="Q5B">Fragment</string>
    <string name="Q5C">Views</string>
    <string name="Q5D">All of the above</string>
    <string name="Q6">An XML file in which each application define, describe the application"\'"s package name, version, component?</string>
    <string name="Q6A">Manifest file</string>
    <string name="Q6B">Dialog</string>
    <string name="Q6C">.apk</string>
    <string name="Q6D">.dex file</string>
    <string name="Q7">Android provide which type of XML parser</string>
    <string name="Q7A">DOM</string>
    <string name="Q7B">SAX</string>
    <string name="Q7C">XML Full Parser</string>
    <string name="Q7D">All of the above</string>
    <string name="Q8">Parent class of Service?</string>
    <string name="Q8A">Object</string>
    <string name="Q8B">Context</string>
    <string name="Q8C">Context Wrapper</string>
    <string name="Q8D">Context Theme Wrapper</string>
    <string name="Q9">Parent class of Activity?</string>
    <string name="Q9A">Object</string>
    <string name="Q9B">Context</string>
    <string name="Q9C">Activity Group</string>
    <string name="Q9D">Context Theme Wrapper</string>
    <string name="Q10">What are the nickname version of android ?</string>
    <string name="Q10A">Cupcake</string>
    <string name="Q10B">Gingerbread</string>
    <string name="Q10C">HoneyComb</string>
    <string name="Q10D">Muffin</string>
    <string name="Scoretext">SCORE:</string>

</resources>
