<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dm"
    android:layout_height="match_parent"
    tools:context="com.example.tarunmittal.uda3pro.Second">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingtop"
                android:textColor="@color/textBackground"
                android:text="@string/Instruction"
                android:textStyle="bold|italic"
                android:layout_marginLeft="@dimen/marginleft"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I1"
                android:drawableLeft="@drawable/ic_action_name"
                android:fontFamily="@string/fontfamily"
                android:paddingTop="@dimen/paddingtop"
                android:drawablePadding="@dimen/marginleft"
                android:textColor="@color/textBackground"
                android:textStyle="bold"
                android:textSize="@dimen/InsTextSize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I4"
                android:fontFamily="@string/fontfamily"
                android:paddingTop="@dimen/paddingtop"
                android:textStyle="bold"
                android:drawablePadding="@dimen/marginleft"
                android:id="@+id/w"
                android:drawableLeft="@drawable/ic_action_name"

                android:textColor="@color/textBackground"
                android:textSize="@dimen/InsTextSize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I5"
                android:fontFamily="@string/fontfamily"
                android:paddingTop="@dimen/paddingtop"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/textMarginRight"
                android:drawablePadding="@dimen/marginleft"

                android:drawableLeft="@drawable/ic_action_name"

                android:textColor="@color/textBackground"
                android:textSize="@dimen/InsTextSize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I2"
                android:fontFamily="@string/fontfamily"
                android:paddingTop="@dimen/paddingtop"
                android:drawablePadding="@dimen/marginleft"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_action_name"
                android:textColor="@color/textBackground"
                android:textSize="@dimen/InsTextSize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I6"
                android:fontFamily="@string/fontfamily"
                android:paddingTop="@dimen/paddingtop"
                android:drawablePadding="@dimen/marginleft"
                android:textStyle="bold"

                android:drawableLeft="@drawable/ic_action_name"
                android:textColor="@color/textBackground"
                android:textSize="@dimen/InsTextSize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I3"
                android:fontFamily="@string/fontfamily"
                android:paddingTop="@dimen/paddingtop"
                android:drawablePadding="@dimen/marginleft"
                android:textStyle="bold"

                android:drawableLeft="@drawable/ic_action_name"
                android:textColor="@color/textBackground"
                android:textSize="@dimen/InsTextSize"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margintop"
                android:textColor="@color/edittext"
                android:text="@string/but1"
                android:textStyle="bold"
                android:paddingBottom="@dimen/paddingbottom"
                android:fontFamily="@string/fontfamily"
                android:id="@+id/Quiz"
                android:onClick="dothis"
                android:paddingLeft="@dimen/paddingleft"
                android:paddingRight="@dimen/paddingright"
                android:background="@color/buttonBackground"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
